<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signup.SignupActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/exo_medium"
        android:text="@string/signup"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_username"
            android:gravity="center_vertical"
            android:hint="@string/first_name"
            android:inputType="text"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_username"
            android:gravity="center_vertical"
            android:hint="@string/last_name"
            android:inputType="text"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_email"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_phone"
            android:gravity="center_vertical"
            android:hint="@string/phone"
            android:inputType="phone"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_select"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/countries"
            android:prompt="@string/country"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_password"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

        <CheckBox
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I agree to the Terms and Conditions"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/credential_error"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/errorColor"
            android:layout_marginBottom="5dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@color/logoColor"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:layout_gravity="center"/>

    </LinearLayout>



</LinearLayout>