<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:fillViewport="true"
    tools:context=".profile.settings.Privacy">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!--  Horizontal line  -->
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#c0c0c0"
            app:layout_constraintTop_toBottomOf="@id/Account_title" />

        <Button
            android:id="@+id/btn_email_address_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/who_can_see_your_email_address"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/linkColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <Button
            android:id="@+id/btn_follow_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/who_can_follow_you"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/linkColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_email_address_privacy" />

        <Button
            android:id="@+id/btn_search_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/search_history"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/linkColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_follow_privacy" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>