<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/wander_logo"
            android:layout_gravity="center"
            android:layout_weight="0.1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_medium"
            android:text="W A N D E R"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_username"
            android:gravity="center_vertical"
            android:hint="@string/user_name"
            android:inputType="text"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_password"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/credential_error"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:id="@+id/errorText"
            android:textColor="@color/errorColor"
            android:layout_marginBottom="5dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:background="@color/logoColor"
            android:textColor="#FFFFFF"
            android:textSize="18dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Create new account"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:id="@+id/signup"
            android:textColor="@color/linkColor"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:layout_gravity="center"/>
    </LinearLayout>



</LinearLayout>